lib/resources/parser/parser_old.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = " ",
      peg$c1 = peg$literalExpectation(" ", false),
      peg$c2 = "|",
      peg$c3 = peg$literalExpectation("|", false),
      peg$c4 = function(i) {return i;},
      peg$c5 = function(start, last) {return start.concat(last)},
      peg$c6 = function(note, quality, accAdd, modList, addList, slashNote) {
        return {
          
        "note": note,
        "quality":quality,
        "modList": modList,
        "addList": accAdd.concat(addList),
        "slashNote": slashNote
        }
      },
      peg$c7 = function(root, acc) {return root + acc},
      peg$c8 = /^[A-G]/,
      peg$c9 = peg$classExpectation([["A", "G"]], false, false),
      peg$c10 = "b",
      peg$c11 = peg$literalExpectation("b", false),
      peg$c12 = "#",
      peg$c13 = peg$literalExpectation("#", false),
      peg$c14 = function(acc) {
        if(acc === undefined)
        {
          return ""
        }
        else {
          return acc.join("");
        }
      },
      peg$c15 = "sus2",
      peg$c16 = peg$literalExpectation("sus2", false),
      peg$c17 = "sus4",
      peg$c18 = peg$literalExpectation("sus4", false),
      peg$c19 = function(extension, triad) {
      return {
      "triad":{
          "symbol":triad,
          "value":triad,
      },
      "extension": extension
      }
      },
      peg$c20 = "dim",
      peg$c21 = peg$literalExpectation("dim", false),
      peg$c22 = function() {
        return {
          "symbol":"dim",
          "value":"dim",
        }
      },
      peg$c23 = "aug",
      peg$c24 = peg$literalExpectation("aug", false),
      peg$c25 = function() {
        return {
          "symbol":"aug",
          "value":"aug",
        }
      },
      peg$c26 = "m",
      peg$c27 = peg$literalExpectation("m", false),
      peg$c28 = function() {
        return {
          "symbol":"m",
          "value":"minor",
        }
      },
      peg$c29 = "-maj7",
      peg$c30 = peg$literalExpectation("-maj7", false),
      peg$c31 = "-maj9",
      peg$c32 = peg$literalExpectation("-maj9", false),
      peg$c33 = "-maj11",
      peg$c34 = peg$literalExpectation("-maj11", false),
      peg$c35 = "-maj13",
      peg$c36 = peg$literalExpectation("-maj13", false),
      peg$c37 = function(triad, symbol) {
      return {
         "triad": triad,
          "extension": {
            "symbol":symbol,
            "value":symbol.substr(1),
            } 
      }
      },
      peg$c38 = function(triad, extension) {
      return {
      "triad":triad ? triad : {
          "symbol":"",
          "value":"major",
        },
      "extension":extension
      }
      },
      peg$c39 = "\xF8",
      peg$c40 = peg$literalExpectation("\xF8", false),
      peg$c41 = function() {
        return {
          "symbol":"ø",
          "value":"dim",
        }
      },
      peg$c42 = "dom",
      peg$c43 = peg$literalExpectation("dom", false),
      peg$c44 = function() {
        return {
          "symbol":"dom",
          "value":"major",
        }
      },
      peg$c45 = "maj",
      peg$c46 = peg$literalExpectation("maj", false),
      peg$c47 = function() {
        return {
          "symbol":"maj",
          "value":"major",
        }
      },
      peg$c48 = "+",
      peg$c49 = peg$literalExpectation("+", false),
      peg$c50 = function(symbol) {
        return {
          "symbol":symbol,
          "value":"aug",
        }
      },
      peg$c51 = function() {
        return {
          "symbol":"sus2",
          "value":"sus2",
        }
      },
      peg$c52 = function() {
        return {
          "symbol":"sus4",
          "value":"sus4",
        }
      },
      peg$c53 = "lyd",
      peg$c54 = peg$literalExpectation("lyd", false),
      peg$c55 = function() {
        return {
          "symbol":"lyd",
          "value":"lyd",
        }
      },
      peg$c56 = "phryg",
      peg$c57 = peg$literalExpectation("phryg", false),
      peg$c58 = function() {
        return {
          "symbol":"phryg",
          "value":"phryg",
        }
      },
      peg$c59 = "6",
      peg$c60 = peg$literalExpectation("6", false),
      peg$c61 = function() {
        return {
          "symbol":"6",
          "value":"6",
        }
      },
      peg$c62 = function(digit) {
        return {
          "symbol":digit,
          "value":digit,
        }
      },
      peg$c63 = function() {
        return {
          "symbol":"",
          "value":"7",
        }
      },
      peg$c64 = function(digit) {
        return {
          "symbol":digit,
          "value": "dim" + digit,
        }
      },
      peg$c65 = function(extensionSymbol, extensionDigits) {
        return {
          "symbol":(extensionSymbol? extensionSymbol : "" ) + extensionDigits,
          "value":(extensionSymbol? extensionSymbol : ""  )  + extensionDigits,
        }
      },
      peg$c66 = function() {
        return {
          "symbol":"",
          "value":"",
        }
      },
      peg$c67 = "\u0394",
      peg$c68 = peg$literalExpectation("\u0394", false),
      peg$c69 = function(digit) {
        return {
          "symbol":"Δ" + digit,
          "value":"maj" + digit,
        }
      },
      peg$c70 = function() {
        return {
          "symbol":"Δ",
          "value":"maj7",
        }
      },
      peg$c71 = "7",
      peg$c72 = peg$literalExpectation("7", false),
      peg$c73 = "9",
      peg$c74 = peg$literalExpectation("9", false),
      peg$c75 = "11",
      peg$c76 = peg$literalExpectation("11", false),
      peg$c77 = "13",
      peg$c78 = peg$literalExpectation("13", false),
      peg$c79 = "-maj",
      peg$c80 = peg$literalExpectation("-maj", false),
      peg$c81 = "M",
      peg$c82 = peg$literalExpectation("M", false),
      peg$c83 = "-M",
      peg$c84 = peg$literalExpectation("-M", false),
      peg$c85 = function() {return "maj"},
      peg$c86 = function(acc) {
          return acc.join("");
      },
      peg$c87 = "",
      peg$c88 = function(acc) {
        if(acc === "")
        {
          return ""
        }
        else {
          return acc.join("");
        }
      },
      peg$c89 = "2",
      peg$c90 = peg$literalExpectation("2", false),
      peg$c91 = "3",
      peg$c92 = peg$literalExpectation("3", false),
      peg$c93 = "4",
      peg$c94 = peg$literalExpectation("4", false),
      peg$c95 = "5",
      peg$c96 = peg$literalExpectation("5", false),
      peg$c97 = "8",
      peg$c98 = peg$literalExpectation("8", false),
      peg$c99 = "10",
      peg$c100 = peg$literalExpectation("10", false),
      peg$c101 = "12",
      peg$c102 = peg$literalExpectation("12", false),
      peg$c103 = function(head, tail) {
      return head + tail;
      },
      peg$c104 = "(",
      peg$c105 = peg$literalExpectation("(", false),
      peg$c106 = ",",
      peg$c107 = peg$literalExpectation(",", false),
      peg$c108 = ")",
      peg$c109 = peg$literalExpectation(")", false),
      peg$c110 = "add",
      peg$c111 = peg$literalExpectation("add", false),
      peg$c112 = /^[\t\n\r]/,
      peg$c113 = peg$classExpectation(["\t", "\n", "\r"], false, false),
      peg$c114 = "/",
      peg$c115 = peg$literalExpectation("/", false),
      peg$c116 = function(note) {return note;},

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parsechord();
    if (s3 !== peg$FAILED) {
      s4 = [];
      if (input.charCodeAt(peg$currPos) === 32) {
        s5 = peg$c0;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }
      while (s5 !== peg$FAILED) {
        s4.push(s5);
        if (input.charCodeAt(peg$currPos) === 32) {
          s5 = peg$c0;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c1); }
        }
      }
      if (s4 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 124) {
          s5 = peg$c2;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c3); }
        }
        if (s5 !== peg$FAILED) {
          s6 = [];
          if (input.charCodeAt(peg$currPos) === 32) {
            s7 = peg$c0;
            peg$currPos++;
          } else {
            s7 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c1); }
          }
          while (s7 !== peg$FAILED) {
            s6.push(s7);
            if (input.charCodeAt(peg$currPos) === 32) {
              s7 = peg$c0;
              peg$currPos++;
            } else {
              s7 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c1); }
            }
          }
          if (s6 !== peg$FAILED) {
            peg$savedPos = s2;
            s3 = peg$c4(s3);
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$parsechord();
      if (s3 !== peg$FAILED) {
        s4 = [];
        if (input.charCodeAt(peg$currPos) === 32) {
          s5 = peg$c0;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c1); }
        }
        while (s5 !== peg$FAILED) {
          s4.push(s5);
          if (input.charCodeAt(peg$currPos) === 32) {
            s5 = peg$c0;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c1); }
          }
        }
        if (s4 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 124) {
            s5 = peg$c2;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c3); }
          }
          if (s5 !== peg$FAILED) {
            s6 = [];
            if (input.charCodeAt(peg$currPos) === 32) {
              s7 = peg$c0;
              peg$currPos++;
            } else {
              s7 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c1); }
            }
            while (s7 !== peg$FAILED) {
              s6.push(s7);
              if (input.charCodeAt(peg$currPos) === 32) {
                s7 = peg$c0;
                peg$currPos++;
              } else {
                s7 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c1); }
              }
            }
            if (s6 !== peg$FAILED) {
              peg$savedPos = s2;
              s3 = peg$c4(s3);
              s2 = s3;
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsechord();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c5(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsechord() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parsenote();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsequality();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseaccAdd();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsemodList();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseaddList();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseslashNote();
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c6(s1, s2, s3, s4, s5, s6);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsenote() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parserootNote();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseaccidentals();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c7(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parserootNote() {
    var s0;

    if (peg$c8.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c9); }
    }

    return s0;
  }

  function peg$parseaccidentals() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    if (input.charCodeAt(peg$currPos) === 98) {
      s2 = peg$c10;
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c11); }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        if (input.charCodeAt(peg$currPos) === 98) {
          s2 = peg$c10;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c11); }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 === peg$FAILED) {
      s1 = [];
      if (input.charCodeAt(peg$currPos) === 35) {
        s2 = peg$c12;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c13); }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (input.charCodeAt(peg$currPos) === 35) {
            s2 = peg$c12;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c13); }
          }
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 === peg$FAILED) {
        s1 = peg$currPos;
        peg$silentFails++;
        if (input.charCodeAt(peg$currPos) === 98) {
          s2 = peg$c10;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c11); }
        }
        if (s2 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 35) {
            s2 = peg$c12;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c13); }
          }
        }
        peg$silentFails--;
        if (s2 === peg$FAILED) {
          s1 = void 0;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c14(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsequality() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseextension();
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 4) === peg$c15) {
        s2 = peg$c15;
        peg$currPos += 4;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c16); }
      }
      if (s2 === peg$FAILED) {
        if (input.substr(peg$currPos, 4) === peg$c17) {
          s2 = peg$c17;
          peg$currPos += 4;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c18); }
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c19(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$currPos;
      if (input.substr(peg$currPos, 3) === peg$c20) {
        s2 = peg$c20;
        peg$currPos += 3;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c21); }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s1;
        s2 = peg$c22();
      }
      s1 = s2;
      if (s1 === peg$FAILED) {
        s1 = peg$currPos;
        if (input.substr(peg$currPos, 3) === peg$c23) {
          s2 = peg$c23;
          peg$currPos += 3;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c24); }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s1;
          s2 = peg$c25();
        }
        s1 = s2;
        if (s1 === peg$FAILED) {
          s1 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 109) {
            s2 = peg$c26;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c27); }
          }
          if (s2 !== peg$FAILED) {
            peg$savedPos = s1;
            s2 = peg$c28();
          }
          s1 = s2;
        }
      }
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 5) === peg$c29) {
          s2 = peg$c29;
          peg$currPos += 5;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c30); }
        }
        if (s2 === peg$FAILED) {
          if (input.substr(peg$currPos, 5) === peg$c31) {
            s2 = peg$c31;
            peg$currPos += 5;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c32); }
          }
          if (s2 === peg$FAILED) {
            if (input.substr(peg$currPos, 6) === peg$c33) {
              s2 = peg$c33;
              peg$currPos += 6;
            } else {
              s2 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c34); }
            }
            if (s2 === peg$FAILED) {
              if (input.substr(peg$currPos, 6) === peg$c35) {
                s2 = peg$c35;
                peg$currPos += 6;
              } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c36); }
              }
            }
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c37(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsetriad();
        if (s1 !== peg$FAILED) {
          s2 = peg$parseextension();
          if (s2 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c38(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }
    }

    return s0;
  }

  function peg$parsetriad() {
    var s0, s1, s2;
